contact.html and portoflio.html fixed

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="style.css">
-<title>Sacha Portfolio</title>
+<link rel="stylesheet" href="reset.css">
+<title>Sacha About Me</title>
 </head>
 
 <body>
@@ -15,21 +16,15 @@
 </nav>
 
 <section class="content">
-    <h1>Contact</h1>
-
-    <form>
-        Name:<br>
-        <input type="text" name="name"><br>
-        Email:<br>
-        <input type="text" name="email"><br>
-        Message:<br>
-        <input type="text" name="message"><br>
-        <input type="submit" value="Submit">
-      </form>
-
+        <h1>Portfolio</h1>
+        <a href="index.html" ><img src="assets/images/technics-q-c-640-480-1.jpg" alt="ipad kid"></a>
+        <a href="index.html" ><img src="assets/images/technics-q-c-640-480-2.jpg" alt="Girl in a jacket"></a>
+        <a href="index.html" ><img src="assets/images/technics-q-c-640-480-5.jpg" alt="Girl in a jacket"></a>
+        <a href="index.html" ><img src="assets/images/technics-q-c-640-480-7.jpg" alt="Girl in a jacket"></a>
+        <a href="index.html" ><img src="assets/images/technics-q-c-640-480-9.jpg" alt="Girl in a jacket"></a>
 </section>
 
-<section class="footer"></section>
+<section class="footer">Copyright 	&copy;</section>
 </body>
 
 </html>
