just savin' things

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="reset.css">
-<title>Sacha Portfolio</title>
+<title>Sacha Contact</title>
 </head>
 
 <body>
