--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="reset.css">
-<title>Sacha About Me</title>
+<title>Sacha Portfolio</title>
 </head>
 
 <body>
@@ -17,11 +17,11 @@
 
 <section class="content">
         <h1>Portfolio</h1>
-        <a href="index.html" ><img src="assets/images/technics-q-c-640-480-1.jpg" alt="ipad kid"></a>
-        <a href="index.html" ><img src="assets/images/technics-q-c-640-480-2.jpg" alt="Girl in a jacket"></a>
-        <a href="index.html" ><img src="assets/images/technics-q-c-640-480-5.jpg" alt="Girl in a jacket"></a>
-        <a href="index.html" ><img src="assets/images/technics-q-c-640-480-7.jpg" alt="Girl in a jacket"></a>
-        <a href="index.html" ><img src="assets/images/technics-q-c-640-480-9.jpg" alt="Girl in a jacket"></a>
+        <a href="" ><aside class="image-text">Hangman</aside><img src="assets/images/technics-q-c-640-480-1.jpg" alt="ipad kid"></a>
+        <a href="" ><aside class="image-text">RPG Game</aside><img src="assets/images/technics-q-c-640-480-2.jpg" alt="turntable"></a>
+        <a href="" ><aside class="image-text">Trivia Game</aside><img src="assets/images/technics-q-c-640-480-5.jpg" alt="headphones"></a>
+        <a href="" ><aside class="image-text">Rutgers Info Widget</aside><img src="assets/images/technics-q-c-640-480-7.jpg" alt="smartphone"></a>
+        <a href="" ><aside class="image-text">Rock Paper Scissors</aside><img src="assets/images/technics-q-c-640-480-9.jpg" alt="screen"></a>
 </section>
 
 <section class="footer">Copyright 	&copy;</section>
