--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <section class="content">
         <h1>About Me</h1>
-        <img />
+        <img img src="assets/images/cat.jpg" alt="a cat">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sit amet ligula eget metus laoreet congue. Curabitur scelerisque a dui vitae posuere. Maecenas vulputate suscipit enim, sit amet ultricies leo laoreet vel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque euismod ante non erat accumsan tincidunt. Aenean pretium leo nec nulla dignissim cursus. Phasellus ipsum augue, pulvinar eu felis ac, vulputate venenatis urna. Donec luctus nisl laoreet finibus mollis. Aenean rutrum eu turpis interdum congue. Praesent pretium dapibus felis. Suspendisse eget turpis non enim ultrices laoreet sed vitae est.</p>
 
         <br>
