Worked on CSS some more

--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="reset.css">
+<link rel="stylesheet" href="assets/css/style.css">
 <title>Sacha Contact</title>
 </head>
 
@@ -28,7 +28,7 @@
         <input type="submit" value="Submit">
       </form>
 
-</section>
+    </section>
 
 <section class="footer">Copyright 	&copy;</section>
 </body>
