--- a/portfolio.html
+++ b/portfolio.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="reset.css">
+<link rel="stylesheet" href="assets/css/style.css">
 <title>Sacha Portfolio</title>
 </head>
 
