--- a/contact.html
+++ b/contact.html
@@ -8,25 +8,31 @@
 </head>
 
 <body>
-<nav>
-        <a href="index.html" id="logo">Sacha Bardy-Bowman</a>
-        <a href="index.html" class="nav">About</a> |
-        <a href="portfolio.html" class="nav">Portfolio</a> |
-        <a href="contact.html" class="nav">Contact</a>
-</nav>
+        <header>
+                <nav>
+                        <div class="left-nav">
+                                <a href="index.html" id="logo" class="heading">Sacha Bardy-Bowman</a>
+                        </div>
+                        <div class="right-nav">
+                                <a href="index.html" class="nav">About</a> |
+                                <a href="portfolio.html" class="nav">Portfolio</a> |
+                                <a href="contact.html" class="nav">Contact</a>
+                        </div>
+                </nav>
+        </header>
 
 <section class="content">
     <h1>Contact</h1>
 
     <form>
         Name:<br>
-        <input type="text" name="name"><br>
+        <input type="text" name="name" class="input"><br>
         Email:<br>
-        <input type="text" name="email"><br>
+        <input type="text" name="email" class="input"><br>
         Message:<br>
-        <input type="text" name="message"><br>
-        <input type="submit" value="Submit">
-      </form>
+        <input type="text" name="message" class="input"><br>
+        <input type="submit" value="Submit" class="button">
+    </form>
 
     </section>
 
