--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="reset.css">
 <link rel="stylesheet" href="assets/css/style.css">
+<link href="https://fonts.googleapis.com/css?family=Eater" rel="stylesheet">
 <title>Sacha About Me</title>
 </head>
 
 <body>
 <header>
         <nav>
-                <a href="index.html" id="logo" class="heading">Sacha Bardy-Bowman</a>
-                <a href="index.html" class="nav">About</a> |
-                <a href="portfolio.html" class="nav">Portfolio</a> |
-                <a href="contact.html" class="nav">Contact</a>
+                <div class="left-nav">
+                        <a href="index.html" id="logo" class="heading">Sacha Bardy-Bowman</a>
+                </div>
+                <div class="right-nav">
+                        <a href="index.html" class="nav">About</a> |
+                        <a href="portfolio.html" class="nav">Portfolio</a> |
+                        <a href="contact.html" class="nav">Contact</a>
+                </div>
         </nav>
 </header>
 <section id="background">
