--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         </header>
 
 <section class="content">
-    <h1>Contact</h1>
+    <h1 class="heading">Contact</h1>
 
     <form>
         Name:<br>
@@ -30,11 +30,11 @@
         Email:<br>
         <input type="text" name="email" class="input"><br>
         Message:<br>
-        <input type="text" name="message" class="input"><br>
+        <input type="text" name="message" class="input" id="message"><br>
         <input type="submit" value="Submit" class="button">
     </form>
 
-    </section>
+</section>
 
 <section class="footer">Copyright 	&copy;</section>
 </body>
