--- a/portfolio.html
+++ b/portfolio.html
@@ -22,12 +22,12 @@
         </header>
 
 <section class="content">
-        <h1>Portfolio</h1>
-        <a href="" ><aside class="image-text">Hangman</aside><img src="assets/images/technics-q-c-640-480-1.jpg" alt="ipad kid"></a>
-        <a href="" ><aside class="image-text" class="clearfix">RPG Game</aside><img src="assets/images/technics-q-c-640-480-2.jpg" alt="turntable"></a>
-        <a href="" ><aside class="image-text">Trivia Game</aside><img src="assets/images/technics-q-c-640-480-5.jpg" alt="headphones"></a>
-        <a href="" ><aside class="image-text" class="clearfix">Rutgers Info Widget</aside><img src="assets/images/technics-q-c-640-480-7.jpg" alt="smartphone"></a>
-        <a href="" ><aside class="image-text" class-"clearfix">Rock Paper Scissors</aside><img src="assets/images/technics-q-c-640-480-9.jpg" alt="screen"></a>
+        <h1 class="heading">Portfolio</h1>
+        <a href="" class="portfolio-a"><aside class="image-text">Hangman</aside><img src="assets/images/technics-q-c-640-480-1.jpg" alt="ipad kid"></a>
+        <a href="" class="portfolio-a"><aside class="image-text">RPG Game</aside><img src="assets/images/technics-q-c-640-480-2.jpg" alt="turntable"></a>
+        <a href="" class="portfolio-a"><aside class="image-text">Trivia Game</aside><img src="assets/images/technics-q-c-640-480-5.jpg" alt="headphones"></a>
+        <a href="" class="portfolio-a"><aside class="image-text">Rutgers Info Widget</aside><img src="assets/images/technics-q-c-640-480-7.jpg" alt="smartphone"></a>
+        <a href="" class="portfolio-a"><aside class="image-text">Rock Paper Scissors</aside><img src="assets/images/technics-q-c-640-480-9.jpg" alt="screen"></a>
 </section>
 
 <section class="footer">Copyright 	&copy;</section>
